Fix warnings for PlayStation build https://bugs.webkit.org/show_bug.cgi?id=284888

Reviewed by Don Olmstead.

* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedBackingStoreProxy.cpp:
(WebCore::CoordinatedBackingStoreProxy::updateIfNeeded): Add UNUSED_PARAMs.
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferHolePunch.cpp:
(WebCore::CoordinatedPlatformLayerBufferHolePunch::notifyVideoPosition): Add UNUSED_VARIABLEs.
* Source/WebKit/WebProcess/playstation/WebProcessPlayStation.cpp:
(WebKit::WebProcess::platformInitializeWebProcess): Update name: Platform -> PlatformDisplay
* Tools/wpe/backends/playstation/HeadlessViewBackendPlayStation.cpp:
(WPEToolingBackends::HeadlessViewBackend::vsync): Deleted.

Canonical link: https://commits.webkit.org/288033@main